--- a/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
+++ b/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.html
@@ -6,7 +6,7 @@
   [class.bottom-right]="textPosition === MouseFacerTextPositionsEnum.BOTTOM_RIGHT"
 >
   <div class="text-content">
-    <h2 [attr.card-title]="text">{{ title }}</h2>
+    <h2 [attr.card-title]="title">{{ title }}</h2>
     <p>{{ description }}</p>
   </div>
 </div>
