--- a/packages/public-client/src/app/components/pages/inside/inside.component.html
+++ b/packages/public-client/src/app/components/pages/inside/inside.component.html
@@ -1,6 +1,24 @@
 <app-site-page>
-  <h1>We're still building...</h1>
-  <p>10 years wasn't quite long enough.</p>
-  <p>For now, please see our <a href="https://www.facebook.com/diveinndenver" target="_blank">Facebook page</a> for updates on events, specials, and all the Dive Inn happenings.</p>
-  <p>FB LINK / IMG</p>
+  <div class="text-content">
+    <h1>We're still <span>building</span>...</h1>
+    <p class="subtitle">...10 years wasn't quite long enough.</p>
+    <p class="blurb">
+      <!-- <a class="facebook" href="https://www.facebook.com/diveinndenver" target="_blank">
+        <img src="assets/images/facebook_logo.png" />
+      </a> -->
+      For now, please see our <a href="https://www.facebook.com/diveinndenver" target="_blank">Facebook page</a> for updates on events, specials, and all the latest Dive Inn happenings.      
+    </p>
+  </div>
+  <div class="links">
+    <!-- <a routerLink="/home" class="dive-home">
+      <img src="assets/images/d_logo.svg" />
+    </a> -->
+    <a class="facebook no-underline" href="https://www.facebook.com/diveinndenver" target="_blank">
+      <img src="assets/images/facebook_logo.png" />
+    </a>
+  </div>
+  <div class="flyers">
+    <img class="specials" src="assets/images/specials/10th_Anniversary_Specials.png" />
+    <img class="menu" src="assets/images/menu/Dive_Inn_Menu.jpg" />
+  </div>
 </app-site-page>
