--- a/packages/public-client/src/app/components/pages/_parts/site-footer/site-footer.component.html
+++ b/packages/public-client/src/app/components/pages/_parts/site-footer/site-footer.component.html
@@ -2,12 +2,12 @@
 <footer>
   <div class="social-icons">
     <!-- NOTE: mis-named so blockers don't filter -->
-    <div class="faceburk"></div>
-    <div class="instakilo"></div>
-    <div class="twatter"></div>
-    <div class="needletrest"></div>
-    <div class="tripsitter"></div>
-    <div class="yalp"></div>
+    <a class="faceburk" target="_blank" href="https://www.facebook.com/diveinndenver/"></a>
+    <a class="instakilo" target="_blank" href="https://www.instagram.com/explore/locations/13038426/dive-inn/"></a>
+    <a class="twatter" target="_blank" href="https://twitter.com/diveinndenver"></a>
+    <a class="needletrest" target="_blank" href="https://www.pinterest.com/diveinndenver"></a>
+    <a class="tripsitter" target="_blank" href="https://www.tripadvisor.com/Restaurant_Review-g33388-d2702017-Reviews-Dive_Inn-Denver_Colorado.html"></a>
+    <a class="yalp" target="_blank" href="https://www.yelp.com/biz/dive-inn-denver?osq=dive+inn"></a>
   </div>
 
   <p>{{address}}<span class="spacer">|</span>{{phone}}</p>
