--- a/packages/public-client/src/app/components/pages/_parts/site-footer/site-footer.component.scss
+++ b/packages/public-client/src/app/components/pages/_parts/site-footer/site-footer.component.scss
@@ -65,38 +65,47 @@ footer {
     background-color: utility.$dive-black;
     border-radius: 2rem;
 
-    >div {
+    > a {
       width: $iconSize;
       height: $iconSize;
       margin: 0 0.5rem;
-      background-image: url('/assets/images/social-sprite.png');
+      //background-image: url('/assets/images/social-sprite.png');
+      &::after {
+        content: none;
+      }
     }
 
     // don't name like ".facebook" as it can be filtered by ad blockers
     .gurgleplus {}
 
     .faceburk {
-      background-position: -($iconSize * 1) 0;
+      //background-position: -($iconSize * 1) 0;
+      background-image: url('/assets/images/social/fabook.svg');
     }
 
     .instakilo {
-      background-position: -($iconSize * 6) 0;
+      //background-position: -($iconSize * 6) 0;
+      background-image: url('/assets/images/social/igram.svg');
     }
 
     .twatter {
-      background-position: -($iconSize * 4) 0;
+      //background-position: -($iconSize * 4) 0;
+      background-image: url('/assets/images/social/twit.svg');
     }
 
     .needletrest {
-      background-position: -($iconSize * 5) 0;
+      //background-position: -($iconSize * 5) 0;
+      background-image: url('/assets/images/social/pinny.svg');
     }
 
     .tripsitter {
-      background-position: -($iconSize * 7) 0;
+      //background-position: -($iconSize * 7) 0;
+      background-image: url('/assets/images/social/tadviser.svg');
     }
 
     .yalp {
-      background-position: -($iconSize * 2) 0;
+      //background-position: -($iconSize * 2) 0;
+      background-image: url('/assets/images/social/yalp.svg');
     }
   }
 }
