--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -16,53 +16,58 @@ $verticalGap: 0.75rem;
     width: 100%;
     box-shadow: 0px 4px 4px utility.$dive-black;
 
+    .logo-container {
+      position: absolute;
+
     img {
       z-index: 2;
-      width: 15vw;
-      position: absolute;
+      width: 24vw;
+      position: relative;
       top: -22vw;
       left: 0rem;
       padding: 1vw;
       $t1: 20%;
-      $t2: 40%;
+      $t2: 38%;
       //background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, utility.$dive-black $t2 + 0.3%, utility.$dive-black $t2 + 0.8%, transparent $t2 + 1.2%);
       background-image: linear-gradient(163deg, utility.$dive-black 0%, utility.$dive-black $t1, $headerColor ($t1 + 0.5%), $headerColor $t2, transparent $t2 + 1.2%);
       border-bottom-right-radius: 50%;
 
       transition: all 0.65s ease;
 
-      @media screen and (max-width: 1500px) {
+      @include utility.media-breakpoint-gte(sm) {
+        width: 22vw;
+      }
+      @include utility.media-breakpoint-gte(md) {
+        width: 20vw;
+      }
+      @include utility.media-breakpoint-gte(ws) {
         width: 18vw;
       }
 
-      @media screen and (max-width: 900px) {
-        width: 22vw;
-      }
-
-      @media screen and (max-width: 500px) {
-        width: 28vw;
-      }
-
       &.anniversary {
-        position: absolute;
-        top: -16vw;
-        left: 0vw;
+        position: relative;
+        top: -18vw;
+        left: -16vw;
         width: 8vw;
         background: none;
 
         &.showLogo {
-          top: 5.5vw;
-          left: 7.75vw;
+          // position: relative;
+          top: 0.25vw; //5.5vw;
+          // top: 20%;
+          left: -8.25vw; //7.75vw;
         }
       }
 
       &.showLogo {
+        // position: relative;
         top: 0rem;
         //display: inline-flex;
         // transform: display(inline-flex);
         // transition: all 1s;
       }
     }
+  }
 
     nav {
       font-size: 1.25vw;
@@ -119,8 +124,8 @@ $verticalGap: 0.75rem;
       .anniversary-callout {
         z-index: 1;
         position: absolute;
-        top: 2rem;
-        left: 2rem;
+        top: 2vw;
+        left: 2vw;
 
         &::after {
           content: '';
@@ -174,9 +179,10 @@ $verticalGap: 0.75rem;
       position: relative;
       width: 100%;
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      gap: 4vw;
       padding: 4vw 10vw 10vw;
       $bgColor: transparent; //rgba(0, 0, 255, 0.51);
       $bgColor2: utility.$dive-red;
@@ -188,10 +194,21 @@ $verticalGap: 0.75rem;
         linear-gradient(0deg, transparent 0%, transparent 99.5%, utility.$dive-black 100%);
 
       app-icon-card {
-        flex: 0 22vw;
+        flex: 0 30vw;
         display: inline-block;
+        width: 90vw;
         background-color: utility.$dive-red;
       }
+
+      @include utility.media-breakpoint-gte(xs) {        
+        flex-direction: row;
+        gap: 0;
+
+        app-icon-card {
+          flex: 0 22vw;
+        }
+      }
+
     }
 
     // end contact-container
