--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -174,43 +174,9 @@ $verticalGap: 0.75rem;
       }
     }
 
-    .contact-container {
-      z-index: 1;
-      position: relative;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      align-items: center;
-      gap: 4vw;
-      padding: 4vw 10vw 10vw;
-      $bgColor: transparent; //rgba(0, 0, 255, 0.51);
-      $bgColor2: utility.$dive-red;
-      background-color: darken($bgColor2, 17%);
-      background-image:
-        radial-gradient(circle at 50% 50%, $bgColor2 20%, $bgColor 40%),
-        radial-gradient(circle at 20% 50%, $bgColor2 15%, $bgColor 30%),
-        radial-gradient(circle at 80% 50%, $bgColor2 15%, $bgColor 30%),
-        linear-gradient(0deg, transparent 0%, transparent 99.5%, utility.$dive-black 100%);
-
-      app-icon-card {
-        flex: 0 30vw;
-        display: inline-block;
-        width: 90vw;
-        background-color: utility.$dive-red;
-      }
-
-      @include utility.media-breakpoint-gte(xs) {        
-        flex-direction: row;
-        gap: 0;
-
-        app-icon-card {
-          flex: 0 22vw;
-        }
-      }
+    app-contact-section {
 
     }
-
     // end contact-container
 
     .intro-section {
