--- a/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
+++ b/packages/public-client/src/app/components/shared/icon-card/icon-card.component.scss
@@ -1,44 +1,107 @@
 @use '../../scss/utility';
 
-%FlexCenter {
+@mixin FlexCenter {
   display: flex;
   justify-content: center;
   align-items: center;    
 }
 
 :host {
-  display: block;
+  display: flex;
+  flex-direction: row;
   padding: 2vw;
-
+  gap: 4vw;
   border-radius: 1rem;
   box-shadow: 1px 1px 4px 0px utility.$dive-black;
   transition: box-shadow 0.25s ease;
+  font-size: 1.65rem;
+
   &:hover {
     box-shadow: 3px 3px 6px 0px utility.$dive-black;
   }
   &:active {
     box-shadow: 0px 0px 2px 0px utility.$dive-black;
   }
-
   .icon-container {
-    @extend %FlexCenter;
-    margin-bottom: 1.15vw;
+    flex: 0 18vw;
+    //width: 14vw;
+    margin-left: 1vw;
+    @include FlexCenter();
+    > div {
+      height: 100%;
+    }
+  }
+  .text-container {
+    width: 100%;
+    margin-right: 1vw;
+    text-shadow: 1px 1px 2px utility.$dive-black;
+    @include FlexCenter();
     
-    $imgSize: 5vw;
-    svg {
-      max-width: $imgSize;
-      max-height: $imgSize;
+    font-size: 4vw;
+    white-space: nowrap;      
+    .large {
+      font-size: 6vw;
+    }
+
+    .center {
+      @include FlexCenter();
+      flex-direction: column;
+      text-align: center;
     }
   }
 
-  .text-container {
-    @extend %FlexCenter;
-    flex-direction: column;
+  @include utility.media-breakpoint-gte(xs) {
+    display: block;
     font-size: 1.25vw;
-    white-space: nowrap;
-    text-shadow: 1px 1px 2px utility.$dive-black;
-    .large {
-      font-size: 2vw;
+
+    .icon-container {
+      @include FlexCenter;      
+      margin: 0 0 1.15vw;
+      $imgSize: 8vw;
+      svg {
+        max-width: $imgSize;
+        max-height: $imgSize;
+      }
     }
+
+    .text-container {
+      @include FlexCenter;
+      margin: 0;
+      flex-direction: column;
+      font-size: 2vw;
+      .large {
+        font-size: 3vw;
+      } 
+    }
+  }
+  @include utility.media-breakpoint-gte(md) {
+    .text-container {
+      @include FlexCenter;
+      margin: 0;
+      flex-direction: column;
+      //font-size: 1rem;
+      .large {
+        //font-size: 1.5rem;
+      } 
+    }        
+  }
+  @include utility.media-breakpoint-gte(lg) {
+    .icon-container {            
+      svg {
+        $imgSize: 5vw;
+        max-width: $imgSize;
+        max-height: $imgSize;
+      }
+    }
+    .text-container {
+      @include FlexCenter;
+      //flex: 0 10vw;
+      margin: 0;
+      flex-direction: column;
+      font-size: 1.5vw;
+      .large {
+        font-size: 2.25vw;
+      } 
+    }        
   }
 }
