mouse facer card mobile style fix

--- a/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.scss
+++ b/packages/public-client/src/app/components/shared/mouse-facer-card/mouse-facer-card.component.scss
@@ -33,7 +33,7 @@ $overrideStroke: 0.7vw;
     &.bottom-right { bottom: 5vw; right: 17vw; }
 
     .text-content {
-      padding: 2rem;
+      padding: 2vw;
       //transform: skew(10deg) rotateZ(5deg);
       text-shadow: 2px 2px 5px #000;
 
