--- a/packages/public-client/src/app/components/pages/home/home.component.scss
+++ b/packages/public-client/src/app/components/pages/home/home.component.scss
@@ -78,13 +78,13 @@ $verticalGap: 0.75rem;
       ul {
         display: flex;
         justify-content: center;
-        gap: 1em;
-        padding: 0.25rem 0;
+        gap: 1vw;
+        padding: 0.25vw 0;
         margin: 0;
         list-style-type: none;
 
         li {
-          padding: 0.5rem 1rem;
+          padding: 0.5vw 1vw;
 
         }
       }
@@ -134,7 +134,6 @@ $verticalGap: 0.75rem;
         }
 
         img {
-          border-radius: 2rem;
           width: 16vw;
         }
       }
